fixed color, alignment and added a regression line for scatterplot

--- a/Work/Assignment_2/css/styles.css
+++ b/Work/Assignment_2/css/styles.css
@@ -6,6 +6,7 @@ html {
 	box-sizing: border-box;;
 }
 body{
+	border-color: black;
 	box-sizing: border-box;
 	background-color: #EEEADD;
 	padding: 0;
